--- a/01_preprocessing.ipynb
+++ b/01_preprocessing.ipynb
@@ -34,7 +34,7 @@
     "from pyspark.sql import SparkSession\n",
     "import os\n",
     "\n",
-    "PATH=\"/home/michalk/Documents/big_data/final-project/jars/spark-xml_2.12-0.15.0.jar\"\n",
+    "PATH=\"jars/spark-xml_2.12-0.15.0.jar\"\n",
     "\n",
     "spark = SparkSession.builder.master(\"local[12]\").appName(\"MyApp\").config(\"spark.jars\", PATH).getOrCreate()\n"
    ]
