--- a/01_preprocessing.ipynb
+++ b/01_preprocessing.ipynb
@@ -1,22 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wstępna obróbka danych"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# download xml jar from bucket\n",
+    "import boto3\n",
+    "s3 = boto3.client('s3')\n",
+    "s3.list_objects(Bucket=\"misc-beer-and-wine\")\n",
+    "s3.download_file(\"misc-beer-and-wine\", \"spark-xml_2.12-0.5.0.jar\", \"spark-xml_2.12-0.5.0.jar\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/01/09 18:44:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/01/19 16:51:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -30,9 +43,8 @@
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "import os\n",
     "\n",
-    "PATH=\"jars/spark-xml_2.12-0.15.0.jar\"\n",
+    "PATH=\"misc/jars/spark-xml_2.12-0.15.0.jar\"\n",
     "\n",
     "spark = SparkSession.builder.master(\"local[12]\").appName(\"MyApp\").config(\"spark.jars\", PATH).getOrCreate()\n"
    ]
@@ -41,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load data to data frames"
+    "## Schematy danych"
    ]
   },
   {
@@ -53,7 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +115,7 @@
     "])\n",
     "\n",
     "users = spark.read.format('xml').options(rowTag='row').schema(users_schema).load(\"data/Users.xml\")\n",
-    "users.show(5)"
+    "users.show())"
    ]
   },
   {
@@ -472,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean up text columns"
+    "## Czyszczenie kolumn tekstowych"
    ]
   },
   {
@@ -515,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write parquet"
+    "## Zapis jako plik `parquet`"
    ]
   },
   {
