another batch commit; results done

--- a/misc/notebooks/02_analytics.ipynb
+++ b/misc/notebooks/02_analytics.ipynb
@@ -68,6 +68,24 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-profile=\"emr\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = spark.read.format('parquet').load(\"s3://preprocessed-data-beer-and-wine//posts\")\n",
+    "posts.cache()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    ":::\n",
     "\\small"
    ]
   },
