--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,3 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
-}
-
-
+@article{bartley_2022, title={Data Statistics - how much data is there in the world?}, url={https://rivery.io/blog/big-data-statistics-how-much-data-is-there-in-the-world/}, journal={Rivery}, author={Bartley, Kevin}, year={2022}, month={Nov}}  
+@patent{dean_ghhemawat_2010, title={System and method for efficient large-scale data processing}, author={Dean, Jeffrey and Ghhemawat, Sanjay}, year={2010}, month={Jan}}
+@misc{apache_hadoop, url={https://hadoop.apache.org/}, title={Apache Hadoop}} 
