--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,6 @@
 @article{bartley_2022, title={Data Statistics - how much data is there in the world?}, url={https://rivery.io/blog/big-data-statistics-how-much-data-is-there-in-the-world/}, journal={Rivery}, author={Bartley, Kevin}, year={2022}, month={Nov}}  
 @patent{dean_ghhemawat_2010, title={System and method for efficient large-scale data processing}, author={Dean, Jeffrey and Ghhemawat, Sanjay}, year={2010}, month={Jan}}
 @misc{apache_hadoop, url={https://hadoop.apache.org/}, title={Apache Hadoop}} 
+@misc{navarro_2017, title={Understanding the data partitioning technique}, url={https://www.datio.com/iaas/understanding-the-data-partitioning-technique/}, journal={Datio}, author={Navarro, Álvaro and Álvaro NavarroOver the last years I’ve been working as a software engineer in several projects for public and private companies}, year={2017}, month={Feb}}
+@article{spark_2010, title={Spark: Cluster Computing with Working Sets}, url={http://people.csail.mit.edu/matei/papers/2010/hotcloud_spark.pdf}, author={Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J. and Shenker, Scott and Stoica, Ion}, year={2010}} 
+@article{rdd_2012, title={Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing}, url={http://people.csail.mit.edu/matei/papers/2012/nsdi_spark.pdf}, author={Zaharia, Matei and Chowdhury, Mosharaf and Das, Tathagata and Dave, Ankur and Ma, Justin and McCauley, Murphy and Franklin, Michael J. and Shenker, Scott and Stoica, Ion}, year={2012}} 
